feat: fixed frontend to consume backend rest api
